--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&family=Poppins:wght@400;500;600;700&display=swap');
+
+.glass-card {
+    background: rgba(0, 0, 0, 0.3);
+    -webkit-backdrop-filter: blur(16px);
+    backdrop-filter: blur(16px);
+    border: 1px solid rgba(0, 0, 0, 0.15);
+}
+
+.gradient-bg {
+    background: rgb(0, 0, 0);
+    background: radial-gradient(circle, rgba(0, 0, 0, 1) 8%, rgba(55, 27, 137, 1) 63%, rgba(0, 0, 0, 1) 100%);
+}
