--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,3 +14,44 @@
     background: rgb(0, 0, 0);
     background: radial-gradient(circle, rgba(0, 0, 0, 1) 8%, rgba(55, 27, 137, 1) 63%, rgba(0, 0, 0, 1) 100%);
 }
+
+.btn {
+    display: block;
+    border: 3px solid #371B89;
+    color: white;
+    position: relative;
+    overflow: hidden;
+    background: transparent;
+    text-transform: uppercase;
+    transition: all .25s;
+}
+
+.btn:before,
+.btn:after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    top: -100%;
+    left: 0;
+    background: #371B89;
+    z-index: -1;
+    transition: all .25s;
+}
+
+.btn:before {
+    opacity: .5;
+}
+
+.btn:after {
+    transition-delay: .1s;
+}
+
+.btn:hover {
+    color: #fff;
+}
+
+.btn:hover:before,
+.btn:hover:after {
+    top: 0;
+}
